Fixed overflow issue for mylist dropdown. Added styles for it (based on topbar)

--- a/apps/ecommerce-storefront-b2b/src/scss/mixins/_product-card.scss
+++ b/apps/ecommerce-storefront-b2b/src/scss/mixins/_product-card.scss
@@ -326,7 +326,6 @@
     }
     .product-card__actions-list {
         position: absolute;
-        overflow: hidden;
         z-index: 1;
 
         @include direction {
@@ -566,7 +565,6 @@
     }
     .product-card__actions-list {
         position: absolute;
-        overflow: hidden;
         z-index: 1;
 
         @include direction {
